--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,17 +4,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 
 body {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #000000;
+}
+
+#blurred-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 0;
+}
+
+#background-container {
+  position: relative;
+  z-index: 1; /* Ensure this is above the blurred background */
   background-size: cover;  /* Cover the entire page */
   background-position: center; /* Center the background image */
   background-repeat: no-repeat; /* Do not repeat the image */
-}
-
-.font-cursive {
-  font-family: 'Dancing Script', cursive;
+  background-color: black; /* Fallback color */
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.524);
 }
 
 .attribution {
