--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-color: rgb(58, 58, 58); /* Fallback color */
   z-index: 0;
 }
 
