--- a/frontend/src/Main/Homescreen/Overlay/OutlineToolbar.css
+++ b/frontend/src/Main/Homescreen/Overlay/OutlineToolbar.css
@@ -1,21 +1,20 @@
-/* HeaderOutline.css */
-.header-outline {
-    position: relative;
+/* OverlayToolbarOutline.css */
+.overlay-toolbar-outline {
     background-clip: padding-box;
-    border-radius: 30px;
+    border-radius: 32px;
     overflow: hidden;
   }
   
-  .header-outline::before {
+  .overlay-toolbar-outline::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    border-radius: 30px;
+    border-radius: 32px;
     padding: 1.5px;
-    background: linear-gradient(180deg,
+    background: linear-gradient(135deg,
       rgba(255, 255, 255, 0.4) 0%,
       rgba(255, 255, 255, 0) 37%,
       rgba(255, 255, 255, 0) 57%,
