--- a/frontend/src/Main/App Icons/AppOutline.css
+++ b/frontend/src/Main/App Icons/AppOutline.css
@@ -1,20 +1,20 @@
-/* HeaderOutline.css */
-.header-outline {
+.icon-gradient-border {
     position: relative;
+    border-radius: 50%;
     background-clip: padding-box;
-    border-radius: 30px;
     overflow: hidden;
-  }
-  
-  .header-outline::before {
+}
+
+.icon-gradient-border::before {
     content: '';
     position: absolute;
+    z-index: 2;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    border-radius: 30px;
-    padding: 1.5px;
+    border-radius: 50%;
+    padding: 2px;
     background: linear-gradient(180deg,
       rgba(255, 255, 255, 0.4) 0%,
       rgba(255, 255, 255, 0) 37%,
@@ -26,7 +26,4 @@
     -webkit-mask-composite: xor;
             mask-composite: exclude;
     pointer-events: none;
-    opacity: 1;
-    transition: opacity 0.2s ease-in-out;
-  }
-  
+}
